# codex-waybar

./: .gitignore  Cargo.toml  LICENSE  PLAN.md  README.md  install.sh
.github/workflows/: release.yml
cffi/codex_shimmer/: main.c  meson.build
examples/: codex-shimmer.service  codex-waybar.service  waybar-config-snippet.jsonc  waybar-style.css
scripts/: codex-waybar-module.sh  install.sh  uninstall.sh
src/: main.rs
systemd/: codex-shimmer.service  codex-waybar.service
tests/: install.rs  uninstall.rs
