[package]
name = "codex-shimmer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
dirs = "5"
glob = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libc = "0.2"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
